k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-app
  namespace: hola
  labels:
    app: hola
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
    spec:
      containers:
      - name: hola
        image: mibancodevsecopstdb2eacr.azurecr.io/hola:dev
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
