k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hola-svc
  namespace: hola
spec:
  selector:
    app: hola
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
