k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hola-ingress
  namespace: hola
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.4.156.246.56.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hola-svc
            port:
              number: 80
